<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dnastack</groupId>
    <artifactId>beacon-adapter-variants</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>beacon-adapter-variants</name>

    <properties>
        <version.compiler.plugin>3.5.1</version.compiler.plugin>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <version.javaee.api>7.0</version.javaee.api>
        <version.beacon.api>0.3.0</version.beacon.api>
        <version.beacon.adapter.api>1.0-SNAPSHOT</version.beacon.adapter.api>
        <version.ga4gh.schema>0.6.0a10</version.ga4gh.schema>
        <version.protobuf>3.0.0-beta-3</version.protobuf>
        <version.retrofit>2.0.2</version.retrofit>
        <version.commons.lang>3.4</version.commons.lang>
        <version.guava>18.0</version.guava>
        <version.groovy>2.4.6</version.groovy>
        <version.gmaven>1.5</version.gmaven>
        <version.wiremock>1.58</version.wiremock>
        <version.testng>6.9.10</version.testng>
        <version.surfire>2.19.1</version.surfire>
        <version.assertj>3.4.1</version.assertj>
        <version.commons.collection>3.2.2</version.commons.collection>
        <version.jacoco>0.7.9</version.jacoco>
        <jacoco.percentage.instruction>0.16</jacoco.percentage.instruction>
        <jacoco.percentage.complexity>0.60</jacoco.percentage.complexity>
        <ga4gh.testServer.url/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${version.javaee.api}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.ga4gh</groupId>
            <artifactId>beacon</artifactId>
            <version>${version.beacon.api}</version>
        </dependency>
        <dependency>
            <groupId>com.dnastack</groupId>
            <artifactId>beacon-adapter-api</artifactId>
            <version>${version.beacon.adapter.api}</version>
        </dependency>
        <dependency>
            <groupId>org.ga4gh</groupId>
            <artifactId>ga4gh-schemas</artifactId>
            <version>${version.ga4gh.schema}</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
            <version>${version.protobuf}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.retrofit2</groupId>
            <artifactId>retrofit</artifactId>
            <version>${version.retrofit}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${version.commons.lang}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${version.guava}</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>${version.groovy}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock</artifactId>
            <version>${version.wiremock}</version>
            <scope>test</scope>
            <classifier>standalone</classifier>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${version.testng}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${version.assertj}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>${version.commons.collection}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.compiler.plugin}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>${version.gmaven}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <testSources>
                        <testSource>
                            <directory>${project.basedir}/src/test/java</directory>
                            <includes>
                                <include>**/*.groovy</include>
                            </includes>
                        </testSource>
                    </testSources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.surfire}</version>
                <configuration>
                    <systemPropertyVariables>
                        <beaconNetwork.test.url>${ga4gh.testServer.url}</beaconNetwork.test.url>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${version.jacoco}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule implementation="org.jacoco.maven.RuleConfiguration">
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit implementation="org.jacoco.report.check.Limit">
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>${jacoco.percentage.complexity}</minimum>
                                        </limit>
                                        <limit>
                                            <counter>INSTRUCTION</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>${jacoco.percentage.instruction}</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
